--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -19,6 +19,29 @@ bindd = SUPER, M, YouTube Music, exec, $webapp="https://music.youtube.com/"
 bindd = SUPER SHIFT, W, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
 bindd = SUPER, X, X, exec, $webapp="https://x.com/i/lists/101391290"
 
+$pip_width = 810
+$pip_height = 456
+$pip_gap = 40
+bind = SUPER, Y, exec, sh -c 'M=$pip_gap; W=$pip_width; H=$pip_height; \
+hyprctl dispatch togglefloating; \
+hyprctl dispatch pin; \
+mons="$(hyprctl -j monitors)"; \
+win="$(hyprctl -j activewindow)"; \
+mid=$(jq -r ".monitor" <<<"$win"); \
+mx=$(jq ".[]|select(.id==$mid)|.x" <<<"$mons"); \
+my=$(jq ".[]|select(.id==$mid)|.y" <<<"$mons"); \
+mw=$(jq ".[]|select(.id==$mid)|.width"  <<<"$mons"); \
+mh=$(jq ".[]|select(.id==$mid)|.height" <<<"$mons"); \
+X=$((mx + mw - W - M)); \
+Y=$((my + mh - H - M)); \
+hyprctl dispatch resizeactive exact $W $H; \
+hyprctl dispatch moveactive exact $X $Y'
+
+bind = SHIFT ALT, Space, exec, vicinae vicinae://toggle
+bind = SUPER ALT, v, exec, vicinae vicinae://extensions/vicinae/clipboard/history
+bind = SUPER ALT, e, exec, vicinae vicinae://extensions/vicinae/vicinae/search-emojis
+bind = ALT, TAB, exec, vicinae vicinae://extensions/vicinae/wm/switch-windows
+
 # bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
 # bindd = SUPER SHIFT, A, Grok, exec, $webapp="https://grok.com"
 # bindd = SUPER, C, Calendar, exec, $webapp="https://app.hey.com/calendar/weeks/"
