--- a/.config/hypr/envs.conf
+++ b/.config/hypr/envs.conf
@@ -1,3 +1,13 @@
 # Extra env variables
 # Note: You must relaunch Hyprland after changing envs (use Super+Esc, then Relaunch)
 # env = MY_GLOBAL_ENV,setting
+
+general {
+    border_size = 3   # makes borders thicker, easier to grab
+    resize_on_border = true
+}
+
+decoration {
+  active_opacity = 1
+  rounding = 5
+}
