--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,8 +1,7 @@
 # Application bindings
-$ghostty = uwsm app -- com.mitchellh.ghostty.desktop
 $terminal = uwsm app -- alacritty
-$browser = uwsm app -- chromium --new-window --ozone-platform=wayland
-$webapp = $browser --app
+$browser = omarchy-launch-browser
+$ghostty = uwsm app -- com.mitchellh.ghostty.desktop
 
 bindd = SUPER, return, Terminal, exec, $terminal
 bindd = SUPER, G, Ghostty, exec, $ghostty
@@ -14,10 +13,10 @@ bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
-bindd = SUPER, A, ChatGPT, exec, $webapp="https://chatgpt.com"
-bindd = SUPER, M, YouTube Music, exec, $webapp="https://music.youtube.com/"
-bindd = SUPER SHIFT, W, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
-bindd = SUPER, X, X, exec, $webapp="https://x.com/i/lists/101391290"
+bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
+bindd = SUPER, M, YouTube Music, exec, omarchy-launch-webapp "https://music.youtube.com/"
+bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
+bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/i/lists/101391290"
 
 $pip_width = 810
 $pip_height = 456
@@ -48,12 +47,12 @@ bind = SUPER ALT, e, exec, vicinae vicinae://extensions/vicinae/vicinae/search-e
 bind = ALT, TAB, exec, vicinae vicinae://extensions/vicinae/wm/switch-windows
 
 # bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
-# bindd = SUPER SHIFT, A, Grok, exec, $webapp="https://grok.com"
-# bindd = SUPER, C, Calendar, exec, $webapp="https://app.hey.com/calendar/weeks/"
-# bindd = SUPER, E, Email, exec, $webapp="https://app.hey.com"
-# bindd = SUPER, Y, YouTube, exec, $webapp="https://youtube.com/"
-# bindd = SUPER ALT, G, Google Messages, exec, $webapp="https://messages.google.com/web/conversations"
-# bindd = SUPER SHIFT, X, X Post, exec, $webapp="https://x.com/compose/post"
+# bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
+# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
+# bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+# bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
+# bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-webapp "https://messages.google.com/web/conversations"
+# bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, Space
