--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -2,7 +2,8 @@
 # See https://wiki.hypr.land/Configuring/Variables/#input
 input {
   numlock_by_default = true
-  mouse_refocus = true
+  follow_mouse = 0
+  mouse_refocus = false
 
   kb_layout = us
   kb_variant = intl
