--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -37,6 +37,11 @@ Y=$((my + mh - H - M)); \
 hyprctl dispatch resizeactive exact $W $H; \
 hyprctl dispatch moveactive exact $X $Y'
 
+bind = SUPER ALT, Up, exec, sh $HOME/.config/hyprecise/hyprecise up
+bind = SUPER ALT, Down, exec, sh $HOME/.config/hyprecise/hyprecise down
+bind = SUPER ALT, Right, exec, sh $HOME/.config/hyprecise/hyprecise right
+bind = SUPER ALT, Left, exec, sh $HOME/.config/hyprecise/hyprecise left
+
 bind = SHIFT ALT, Space, exec, vicinae vicinae://toggle
 bind = SUPER ALT, v, exec, vicinae vicinae://extensions/vicinae/clipboard/history
 bind = SUPER ALT, e, exec, vicinae vicinae://extensions/vicinae/vicinae/search-emojis
