--- a/.config/hypr/envs.conf
+++ b/.config/hypr/envs.conf
@@ -2,6 +2,9 @@
 # Note: You must relaunch Hyprland after changing envs (use Super+Esc, then Relaunch)
 # env = MY_GLOBAL_ENV,setting
 
+env = HYPRECISE_MODE,auto
+env = HYPRECISE_LOOP,true
+
 general {
     border_size = 3   # makes borders thicker, easier to grab
     resize_on_border = true
