--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -3,21 +3,44 @@ $terminal = uwsm app -- alacritty
 $browser = omarchy-launch-browser
 $ghostty = uwsm app -- com.mitchellh.ghostty.desktop
 
-bindd = SUPER, return, Terminal, exec, $terminal
+bindd = SUPER, return, Terminal, exec, $ghostty
 bindd = SUPER, G, Ghostty, exec, $ghostty
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER, N, Neovim, exec, $terminal -e nvim
-bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
+bindd = SUPER ALT CONTROL, M, Activity, exec, $terminal -e btop
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
+bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
 
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER, M, YouTube Music, exec, omarchy-launch-webapp "https://music.youtube.com/"
 bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
 bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/i/lists/101391290"
 
+bind = SUPER ALT, Up, exec, sh $HOME/.config/hyprecise/hyprecise up
+bind = SUPER ALT, Down, exec, sh $HOME/.config/hyprecise/hyprecise down
+bind = SUPER ALT, Right, exec, sh $HOME/.config/hyprecise/hyprecise right
+bind = SUPER ALT, Left, exec, sh $HOME/.config/hyprecise/hyprecise left
+
+bind = SHIFT ALT, Space, exec, vicinae vicinae://toggle
+bind = SUPER ALT, v, exec, vicinae vicinae://extensions/vicinae/clipboard/history
+bind = SUPER ALT, e, exec, vicinae vicinae://extensions/vicinae/vicinae/search-emojis
+bind = ALT, TAB, exec, vicinae vicinae://extensions/vicinae/wm/switch-windows
+
+# bindd = SUPER, N, Neovim, exec, $terminal -e nvim
+# bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
+# bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
+# bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
+# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
+# bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+# bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
+# bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-webapp "https://messages.google.com/web/conversations"
+# bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+
+# Overwrite existing bindings, like putting Omarchy Menu on Super + Space
+# unbind = SUPER, Space
+# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+
+# PIP => Super + Y
 $pip_width = 810
 $pip_height = 456
 $pip_gap = 40
@@ -35,25 +58,3 @@ X=$((mx + mw - W - M)); \
 Y=$((my + mh - H - M)); \
 hyprctl dispatch resizeactive exact $W $H; \
 hyprctl dispatch moveactive exact $X $Y'
-
-bind = SUPER ALT, Up, exec, sh $HOME/.config/hyprecise/hyprecise up
-bind = SUPER ALT, Down, exec, sh $HOME/.config/hyprecise/hyprecise down
-bind = SUPER ALT, Right, exec, sh $HOME/.config/hyprecise/hyprecise right
-bind = SUPER ALT, Left, exec, sh $HOME/.config/hyprecise/hyprecise left
-
-bind = SHIFT ALT, Space, exec, vicinae vicinae://toggle
-bind = SUPER ALT, v, exec, vicinae vicinae://extensions/vicinae/clipboard/history
-bind = SUPER ALT, e, exec, vicinae vicinae://extensions/vicinae/vicinae/search-emojis
-bind = ALT, TAB, exec, vicinae vicinae://extensions/vicinae/wm/switch-windows
-
-# bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
-# bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-# bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
-# bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
-# bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-webapp "https://messages.google.com/web/conversations"
-# bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
-
-# Overwrite existing bindings, like putting Omarchy Menu on Super + Space
-# unbind = SUPER, Space
-# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
