--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,7 +1,7 @@
 # Application bindings
 $terminal = uwsm app -- alacritty
 $browser = omarchy-launch-browser
-$ghostty = uwsm app -- com.mitchellh.ghostty.desktop
+$ghostty = uwsm app -- ghostty --gtk-single-instance=true
 
 bindd = SUPER, return, Terminal, exec, $ghostty
 bindd = SUPER, G, Ghostty, exec, $ghostty
