--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -17,6 +17,8 @@ input {
   # Increase sensitity for mouse/trackpack (default: 0)
   # sensitivity = 0.35
 
+  scroll_factor = 0.1
+
   touchpad {
     # Use natural (inverse) scrolling
     # natural_scroll = true
