--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,2 +1,4 @@
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
+
+exec-once = ghostty --gtk-single-instance=true --quit-after-last-window-closed=false --initial-window=false
