--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -2,13 +2,13 @@
   "workbench.colorTheme": "Night Owl",
   "workbench.iconTheme": "catppuccin-macchiato",
   "window.title": "${activeEditorLong}${separator}${rootName}",
-  "editor.fontFamily": "'Dank Mono', 'Hack Nerd Font Mono', 'JetBrainsMono Nerd Font', Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontFamily": "'JetBrainsMonoNL NF', 'Fira Code', Monaco, 'Courier New', monospace",
   "editor.fontWeight": "300",
   "workbench.startupEditor": "newUntitledFile",
   "editor.bracketPairColorization.enabled": false,
   "editor.tabSize": 2,
   "editor.fontLigatures": true,
-  "editor.fontSize": 20,
+  "editor.fontSize": 16,
   "terminal.integrated.fontSize": 14,
   "prettier.tabWidth": 2,
   "files.defaultLanguage": "plaintext",
