--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ bind r source-file ~/.tmux.conf
 set-option -g display-time 3000
 set-option -g focus-events on
 
-set -g default-shell "/bin/bash"
+set -g default-shell "/bin/fish"
 set -g default-terminal "tmux-256color"
 
 # Split panes vertically / horizontal
@@ -36,12 +36,34 @@ set -g @fzf-url-history-limit '2000'
 
 set -g @thumbs-command 'echo -n {} | pbcopy'
 
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'fcsonline/tmux-thumbs'
+
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style "rounded"
+
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_status_modules_right "session date_time"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+set -g @catppuccin_window_current_color "#F4BF75" # text color
 
 bind-key "K" display-popup -E -w 60% "sesh connect \"$(
   sesh list -i | gum filter --limit 1 --placeholder 'Pick a sesh' --prompt='⚡'
@@ -60,15 +82,7 @@ bind-key "T" run-shell "sesh connect \"$(
 		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
 )\""
 
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_date_time}"
-
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g pane-active-border-style 'fg=brightblack,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
